[tool.poetry]
name = "traceroute-maps"
version = "0.1.0"
description = "cool graphical traceroute"
authors = ["Ed Hagerty <ed@hagerty.net>"]
readme = "README.md"
packages = [{include = "traceroute_maps"}]

[tool.poetry.dependencies]
python = "^3.10"
certifi = "2022.5.18.1"
charset-normalizer = "2.0.12"
idna = "3.3"
plotly = "5.8.0"
requests = "2.27.1"
tenacity = "8.0.1"
urllib3 = "1.26.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
